@@ -21,11 +21,13 @@ useTestFixtures(sourceSet: 'integTest', project: ':platformNative')
 integTestTasks.all {
     dependsOn({ rootProject.getTasksByName('publishLocalArchives', true) }, ':docs:userguideDocbook')
 
-    jvmArgs '-Xmx512m', '-XX:MaxPermSize=256m'
+
+    def userguideOutput = new File(project(':docs').samplesSrcDir, "userguideOutput")
+    inputs.files(fileTree(userguideOutput))
 
     doFirst {
         systemProperties['integTest.userGuideInfoDir'] = project(':docs').docbookSrc
-        systemProperties['integTest.userGuideOutputDir'] = new File(project(':docs').samplesSrcDir, "userguideOutput").absolutePath
+        systemProperties['integTest.userGuideOutputDir'] = userguideOutput.absolutePath
     }
 
     // You can exclude the userguide samples by their ids by specifying this system property.
